# fast-api-lms

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0789e160af73_moving_is_active_to_user_table_from_.py  acb0f1c0eeb3_.py
api/: courses.py  sections.py  users.py
db/: db_setup.py
db/models/: course.py  user.py
